tests/test_enum/bad/wrong_cons.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1

declaration scope A:
  context e content E

scope A:
  definition e equals Case2
```

```catala-test-inline
$ catala Typecheck
[ERROR]
The name of this constructor has not been defined before
(it's probably a typographical error).

Here is your code :
┌─⯈ tests/test_enum/bad/wrong_cons.catala_en:11.23-11.28:
└──┐
11 │   definition e equals Case2
   │                       ‾‾‾‾‾
   └─ Article

Maybe you wanted to write : "Case1"
#return code 123#
```
